kubernetes-deploy/cluster-bundle/manifests-local-openvre/manifest/_all.yaml
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-ingress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-frontend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: dashboard-keycloak
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: dashboard-mongodb
      ports:
        - protocol: TCP
          port: 27017
    - to:
        - podSelector:
            matchLabels:
              app: dashboard-sgecore
      ports:
        - protocol: TCP
          port: 6444
    - to:
        - podSelector:
            matchLabels:
              app: scheduler
      ports:
        - protocol: TCP
          port: 8080
    - ports:
        - protocol: TCP
          port: 443
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-ingress-egress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-keycloak
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dashboard-frontend
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: dashboard-postgres
      ports:
        - protocol: TCP
          port: 5432
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-ingress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dashboard-frontend
      ports:
        - protocol: TCP
          port: 27017
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ingress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dashboard-keycloak
      ports:
        - protocol: TCP
          port: 5432
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sgecore-ingress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-sgecore
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dashboard-frontend
      ports:
        - protocol: TCP
          port: 6444
---
# Source: bsc-tre/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scheduler-ingress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: scheduler
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dashboard-frontend
      ports:
        - protocol: TCP
          port: 8080
---
# Source: bsc-tre/templates/dashboard-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-mongodb
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  ports:
    - name: api
      port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: dashboard-mongodb
---
# Source: bsc-tre/templates/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-frontend
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: dashboard-frontend
---
# Source: bsc-tre/templates/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-keycloak
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  ports:
    - name: api
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: dashboard-keycloak
---
# Source: bsc-tre/templates/scheduler.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  selector:
    app: scheduler
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
# Source: bsc-tre/templates/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-postgres
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  ports:
    - name: api
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: dashboard-postgres
---
# Source: bsc-tre/templates/sgecore.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-sgecore
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  ports:
    - name: api
      port: 6444
      targetPort: 6444
      protocol: TCP
  selector:
    app: dashboard-sgecore
---
# Source: bsc-tre/templates/dashboard-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-mongodb
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-mongodb
  template:
    metadata:
      labels:
        app: dashboard-mongodb
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dashboard-mongodb
          image: mongo:8.0
          args:
            - mongod
            - --bind_ip_all
            - --tlsMode=disabled
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: 300m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: conf-configmap
              mountPath: /etc/mongo/mongod.conf
              subPath: mongod.conf
            - name: init-sh-configmap
              mountPath: /docker-entrypoint-initdb.d/
            - name: init-documents-configmap
              mountPath: /init_documents
            - name: data
              mountPath: /data/db
      volumes:
        - name: conf-configmap
          configMap:
            name: dashboard-mongodb-conf
            items:
              - key: mongod.conf
                path: mongod.conf
        - name: init-sh-configmap
          configMap:
            name: dashboard-mongodb-init-sh
            defaultMode: 0755
        - name: init-documents-configmap
          configMap:
            name: dashboard-mongodb-init-documents
        - name: data
          persistentVolumeClaim:
            claimName: dashboard-mongodb-data
---
# Source: bsc-tre/templates/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-frontend
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-frontend
  template:
    metadata:
      labels:
        app: dashboard-frontend
    spec:
      serviceAccountName: dashboard-frontend
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dashboard-frontend
          image: docker.io/ymaqsoodbsc/openvre-kubernetes:frontend-2.0
          securityContext:
            runAsUser: 0
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          command:
            - bash
            - -c
            - export MONGO_CREDENTIALS="${MONGO_INITDB_USERNAME}:${MONGO_INITDB_PASSWORD}" && /opt/docker/bin/entrypoint.sh supervisord
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: frontend-sgecore-shareddata
              mountPath: /shared_data
            - name: frontend-tools
              mountPath: /var/www/html/openVRE/public/tools
            - name: conf
              mountPath: /var/www/html/openVRE/config/globals.inc.php
              subPath: globals.inc.php
            - name: conf
              mountPath: /var/lib/gridengine/default/common/act_qmaster
              subPath: act_qmaster
            - name: apache-conf
              mountPath: /opt/docker/etc/httpd/conf.d/10-server.conf
              subPath: server.conf
      volumes:
        - name: frontend-sgecore-shareddata
          persistentVolumeClaim:
            claimName: dashboard-frontend-sgecore-shareddata
        - name: frontend-tools
          persistentVolumeClaim:
            claimName: dashboard-frontend-tools
        - name: apache-conf
          configMap:
            name: dashboard-frontend-apache-conf
            items:
              - key: server.conf
                path: server.conf
        - name: conf
          configMap:
            name: dashboard-frontend-config
            items:
              - key: globals.inc.php
                path: globals.inc.php
              - key: act_qmaster
                path: act_qmaster
---
# Source: bsc-tre/templates/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-keycloak
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-keycloak
  template:
    metadata:
      labels:
        app: dashboard-keycloak
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dashboard-keycloak
          image: quay.io/keycloak/keycloak:15.0.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          args:
            - -b
            - 0.0.0.0
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
---
# Source: bsc-tre/templates/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  labels:
    app: scheduler
    app.kubernetes.io/part-of: bsc-tre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      serviceAccountName: scheduler
      automountServiceAccountToken: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: scheduler
          image: ymaqsoodbsc/openvre-kubernetes:scheduler-1.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
---
# Source: bsc-tre/templates/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-postgres
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-postgres
  template:
    metadata:
      labels:
        app: dashboard-postgres
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dashboard-postgres
          image: postgres:17.3
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dashboard-postgres-data
---
# Source: bsc-tre/templates/sgecore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-sgecore
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-sgecore
  template:
    metadata:
      labels:
        app: dashboard-sgecore
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dashboard-sgecore
          image: docker.io/ymaqsoodbsc/openvre-kubernetes:sgecore-1.0
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 6444
          command:
            - /bin/bash
            - -c
            - |
              groupmod -g $DOCKER_GROUP docker \
              && usermod -aG docker application \
              && echo "$SUBMITTER_HOSTNAME" > /home/application/submit_hosts.list \
              && /entrypoint.sh
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: frontend-sgecore-shareddata
              mountPath: /shared_data
      volumes:
        - name: frontend-sgecore-shareddata
          persistentVolumeClaim:
            claimName: dashboard-frontend-sgecore-shareddata
---
# Source: bsc-tre/templates/frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-frontend
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-frontend
                port:
                  number: 80
